--- a/src/pages/play/play.html
+++ b/src/pages/play/play.html
@@ -18,7 +18,7 @@
     </p>
   </div>
   <div class="spacer" style="width:300px;height:199px;" id="play-spacer1"></div>
-  <button id="play-button1" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;">
+  <button id="play-button1" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;" on-click="update()" >
     Yes
   </button>
   <button id="play-button4" ion-button clear color="positive" large style="font-size:2px;"></button>
@@ -27,7 +27,7 @@
   <button id="play-button6" ion-button clear color="positive" large style="font-size:2px;"></button>
   <button id="play-button7" ion-button clear color="positive" large style="font-size:2px;"></button>
   <button id="play-button8" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button2" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;">
+  <button id="play-button2" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;" on-click="update()">
     No
   </button>
   <p>
