--- a/src/pages/play/play.html
+++ b/src/pages/play/play.html
@@ -4,34 +4,37 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Play
+      Play Quiz
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page1" style="background-color:#03A9F4;">
-  <h3 id="play-heading1" style="color:#000000;font-style:italic;text-align:center;">
+    <ion-card>
+        <ion-card-header>
+  <!-- <h3 id="play-heading1" style="color:#000000;font-style:italic;text-align:center;"> -->
     {{category}}
-  </h3>
-  <div id="play-markdown1" style="text-align:center;" class="show-list-numbers-and-dots">
+  <!-- </h3> -->
+        </ion-card-header>
+      <ion-card-content>
+  <!-- <div id="play-markdown1" style="text-align:center;" class="show-list-numbers-and-dots"> -->
+      
     <p style="color:#000000;">
       {{question}}
     </p>
-  </div>
+  <!-- </div> -->
+</ion-card-content>
+</ion-card>
   <div class="spacer" style="width:300px;height:199px;" id="play-spacer1"></div>
-  <button id="play-button1" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;" on-click="update()" >
-    Yes
-  </button>
-  <button id="play-button4" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button3" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button5" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button6" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button7" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button8" ion-button clear color="positive" large style="font-size:2px;"></button>
-  <button id="play-button2" ion-button color="royal" large style="font-size:20px;border-radius:10px 10px 10px 10px;" on-click="update()">
-    No
-  </button>
+  <button ion-button full class="menuButton" on-click="update0()">{{Answer0}}</button>
+  <button ion-button full class="menuButton" on-click="update1()">{{Answer1}}</button>
+  <button ion-button full class="menuButton" on-click="update2()">{{Answer2}}</button>
+  <button ion-button full class="menuButton" on-click="update3()">{{Answer3}}</button>
+  
   <p>
     correctAnswer: {{correctAnswer}}
+   </p>
+   <p>
+    score: {{staticScore}}
    </p>
 </ion-content>
 
