--- a/src/pages/score/score.html
+++ b/src/pages/score/score.html
@@ -4,20 +4,10 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Score
+      Game
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page2" style="background-color:#03A9F4;">
-  <ion-list id="score-list3">
-    <ion-item color="none" id="score-list-item8">
-      Item 1
-    </ion-item>
-    <ion-item color="none" id="score-list-item9">
-      Item 2
-    </ion-item>
-    <ion-item color="none" id="score-list-item10">
-      Item 3
-    </ion-item>
-  </ion-list>
+
 </ion-content>
