--- a/src/pages/play/play.html
+++ b/src/pages/play/play.html
@@ -4,11 +4,17 @@
       <ion-icon name="menu"></ion-icon>
     </button>
     <ion-title>
-      Play Quiz
+      Quiz
     </ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding id="page1" style="background-color:#03A9F4;">
+    <ion-item>
+        <ion-icon name="bulb" item-left large ></ion-icon>
+        <p>
+            score: {{staticScore}}
+           </p>
+      </ion-item>
     <ion-card>
         <ion-card-header>
   <!-- <h3 id="play-heading1" style="color:#000000;font-style:italic;text-align:center;"> -->
@@ -24,6 +30,7 @@
   <!-- </div> -->
 </ion-card-content>
 </ion-card>
+
   <div class="spacer" style="width:300px;height:199px;" id="play-spacer1"></div>
   <button ion-button full class="menuButton" on-click="update0()">{{Answer0}}</button>
   <button ion-button full class="menuButton" on-click="update1()">{{Answer1}}</button>
