--- a/src/pages/score/score.html
+++ b/src/pages/score/score.html
@@ -8,6 +8,14 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
+
+<ion-content padding>
+  
+    <h3>phaser sample</h3>
+  
+    <div id="phaser-example"></div>
+  
+  </ion-content>
 <ion-content padding id="page2" style="background-color:#03A9F4;">
 
 </ion-content>
