--- a/src/pages/score/score.html
+++ b/src/pages/score/score.html
@@ -8,6 +8,10 @@
     </ion-title>
   </ion-navbar>
 </ion-header>
-<ion-content padding id="page2" style="background-color:#03A9F4;">
+<!-- <ion-content padding id="page2" style="background-color:#03A9F4;">
 
+</ion-content> -->
+
+<ion-content>
+  <div id="game"></div>
 </ion-content>
