fix images in device

--- a/src/pages/play/play.html
+++ b/src/pages/play/play.html
@@ -31,7 +31,7 @@
 </ion-card-content>
 </ion-card>
 
-  <div class="spacer" style="width:300px;height:199px;" id="play-spacer1"></div>
+  <!-- <div class="spacer" style="width:300px;height:199px;" id="play-spacer1"></div> -->
   <button ion-button full class="menuButton" on-click="update0()">{{Answer0}}</button>
   <button ion-button full class="menuButton" on-click="update1()">{{Answer1}}</button>
   <button ion-button full class="menuButton" on-click="update2()">{{Answer2}}</button>
